[gd_scene load_steps=8 format=3 uid="uid://dlkxpwy0sdxy8"]

[ext_resource type="Script" uid="uid://cy0j88ip65ljb" path="res://Scripts/enemigo.gd" id="1_1o23q"]
[ext_resource type="Texture2D" uid="uid://cm5rdp15ihl3r" path="res://Arte/CANGREJITO caminata3.png" id="1_k4ee2"]
[ext_resource type="PackedScene" uid="uid://boi68xbn2si2g" path="res://Escena/ObjetoTirable.tscn" id="2_5ulp1"]
[ext_resource type="Texture2D" uid="uid://b6u878rr62gfw" path="res://Arte/CANGREJITO caminata 1.png" id="2_vrpao"]
[ext_resource type="Texture2D" uid="uid://b6wqfh813dgn0" path="res://Arte/CANGREJITO caminata 2.png" id="3_aq3ox"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r2tdg"]
radius = 32.0
height = 64.0

[sub_resource type="SpriteFrames" id="SpriteFrames_oeus8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k4ee2")
}, {
"duration": 1.0,
"texture": ExtResource("2_vrpao")
}, {
"duration": 1.0,
"texture": ExtResource("3_aq3ox")
}],
"loop": true,
"name": &"Cangrejo",
"speed": 9.0
}]

[node name="Enemigo1" type="Area2D" groups=["Enemigo"]]
script = ExtResource("1_1o23q")
objetoTirable = ExtResource("2_5ulp1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_r2tdg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oeus8")
animation = &"Cangrejo"
frame_progress = 0.204041
flip_h = true

[node name="Spawn" type="Node2D" parent="."]

[node name="IntanciarObj" type="Timer" parent="Spawn"]
wait_time = 0.7
autostart = true

[node name="SpawnObjeto" type="Marker2D" parent="Spawn"]
position = Vector2(-48, -32)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Spawn/IntanciarObj" to="." method="IntanciarObjeto"]
